syntax = "proto3";

package org.jscience.server.proto;

option java_multiple_files = true;
option java_package = "org.jscience.server.proto";
option java_outer_classname = "ComputeServiceProto";

// The distributed compute service definition.
service ComputeService {
  // Submits a single task for execution
  rpc SubmitTask (TaskRequest) returns (TaskResponse) {}

  // Streams status updates or partial results for a task
  rpc StreamResults (TaskIdentifier) returns (stream TaskResult) {}
  
  // Checking server health/status
  rpc GetStatus (Empty) returns (ServerStatus) {}

  // Worker Interface
  rpc RegisterWorker (WorkerRegistration) returns (WorkerRegistrationResponse) {}
  rpc RequestTask (WorkerIdentifier) returns (TaskRequest) {} // Returns empty TaskRequest if no work
  rpc SubmitResult (TaskResult) returns (Empty) {}
}

message WorkerRegistration {
  string hostname = 1;
  int32 cores = 2;
  int64 memory = 3;
}

message WorkerRegistrationResponse {
  string workerId = 1;
  bool authorized = 2;
}

message WorkerIdentifier {
  string workerId = 1;
}

message Empty {}

enum Priority {
  LOW = 0;
  NORMAL = 1;
  HIGH = 2;
  CRITICAL = 3;
}

message TaskRequest {
  string taskId = 1;
  // Serialized Java object (Callable<T>)
  bytes serializedTask = 2;
  Priority priority = 3;
  int64 timestamp = 4;
}

message TaskResponse {
  string taskId = 1;
  // Enum status: QUEUED, SUBMITTED
  Status status = 2;
  string message = 3;
}

message TaskIdentifier {
  string taskId = 1;
}

message TaskResult {
  string taskId = 1;
  Status status = 2;
  // Serialized result object or exception
  bytes serializedData = 3;
  // Progress percentage (0-100)
  int32 progress = 4;
  string errorMessage = 5;
}

message ServerStatus {
  int32 activeWorkers = 1;
  int32 queuedTasks = 2;
  double systemLoad = 3;
}

enum Status {
  UNKNOWN = 0;
  QUEUED = 1;
  RUNNING = 2;
  COMPLETED = 3;
  FAILED = 4;
}
